// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity reducer handles actions handles errors on fetchBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "",
    "name": "Saturn",
    "balance": null,
  },
  "fetchingBalance": false,
  "errors": "node error",
}
`;

exports[`Identity reducer handles actions handles fetchBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "",
    "name": "Saturn",
    "balance": "2.2352",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "name": "",
    "balance": "2.34",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setErrors 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "name": "",
    "balance": null,
  },
  "fetchingBalance": false,
  "errors": [Error: this is some error],
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to false 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "name": "",
    "balance": null,
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to true 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "name": "",
    "balance": null,
  },
  "fetchingBalance": true,
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setIdentity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "",
    "name": "Saturn",
    "balance": null,
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for mainnet 1`] = `
Array [
  Object {
    "address": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivks1g0pxacm9ptufsnnp2g23rhcuelpt90ftvamgrvy6hlqeg3n00qrqer5uxf",
    },
    "name": "General",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for testnet 1`] = `
Array [
  Object {
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
    "name": "General",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity creates identity in vault 1`] = `
Array [
  Array [
    Object {
      "address": "sapling-zcash-address",
      "name": "Mercury",
      "transparentAddress": "transparent-zcash-address",
    },
  ],
]
`;

exports[`Identity reducer handles epics handles createIdentity returns created identity 1`] = `
Object {
  "address": "sapling-zcash-address",
  "id": "thisisatestid",
  "name": "Mercury",
}
`;

exports[`Identity reducer handles epics handles set identity - loads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
    },
    "name": "Channel 2",
    "private": true,
    "hash": "eJwtjEEOgzAMBL+CfE4O5ci1L7GISyzAoDhNBYi/11Z78mpmvRdwgqEPILgSDPDMKEJL10OAvXDDavSFi1KAjJqtUklr9By9hCkVUjV+6sPVH7h7SyH8zSfSsfBeeROrmpvpsKcLuM0GWMZtZZliY/r4NW3z9/0FKdQ0sg==",
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
    },
    "name": "Channel 1",
    "private": true,
    "hash": "eJxNjTEOwjAMRa+CPCdD1q6cxDQWsUqdKk6CoOrd6wADk633vv7fgSNMwYHgSjDBNaEIPS4BHGyFO1ajtTRykFCTJSpp9eP3I4MxFlI1/tYw1A8M16QQftsj6Vx4q5zlbwRvudXP1EIv69iB+2KeZc4ry913pue4pm3tOE48Yzmm",
    "address": "zs1testaddress1",
    "unread": 1,
    "description": "Channel about 1",
  },
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
    },
    "name": "Channel 0",
    "private": true,
    "hash": "eJwtjEEOgzAMBL9S+ZxIcOXal1jEJRZgUJwGUcTfa6s9eTWz3gs4wdAFEFwJBnhmFKHl0UGAvXDDavSFi1KAjJqtUklr9By9hCkVUjX+0d7VH7h7SyH8zSfSsfBeeROrmpvptKcLuM0GWMZtZZliYzr8mrb5+/4CJb40pg==",
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
  },
]
`;

exports[`Identity reducer handles epics handles set identity - sets identity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "",
    "name": "Saturn",
    "balance": "2.2352",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;
